<resources>
    <string name="app_name">Pharmeasy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_logout">Logout</string>


    // login screen
    <string name="login">Login</string>

    // sign up
    <string name="sign_up">Sign Up</string>
    <string name="user">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="pharmacist">Pharmacist</string>
    <string name="type_of_user">Type of User</string>
    <string name="new_sign_up">Sign Up ?</string>

    // new prescription screen
    <string name="new_prescription">New Prescription</string>
    <string name="hint_prescription_name">Enter prescription name</string>
    <string name="hint_prescription_detail">Enter prescription detail</string>
    <string name="save">Save</string>

    // doctor menu
    <string name="patients">Patients</string>
    <string name="prescriptions">Prescriptions</string>


    <string name="request">Request</string>
    <string name="allow">Allow</string>

</resources>
